# serverless-api-sample

./: .gitignore  Cargo.toml  README.md  deploy.yaml  template.yaml
src/: main.rs
