[package]
name = "serverless-api-sample"
version = "0.1.0"
edition = "2021"
authors = ["codemountains <codemountains@gmail.com>"]
readme = "README.md"
license = "MIT"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_http = "0.4.1"
tokio = { version = "1.13.0", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
